# secretlottery-contract

./: Cargo.toml  Developing.md  README.md  buildcontract.sh  codehash-mainnet.txt  codehash-mainnet2.txt  codehash.txt  contractaddr-mainnet.txt  contractaddr-mainnet2.txt  contractaddr-testnet.txt  contractaddr.txt  secworkshop.key  uploadtx.txt
artifacts/: secret_lootbox.wasm
schema/: init_msg.json
src/: contract.rs  msg.rs  state.rs
